--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_API_URL = "https://personalandtraining.netlify.app/" || "http://localhost:3000/"
+REACT_APP_API_URL = "https://personal-and-training.herokuapp.com/" || "http://localhost:3000/"
